--- a/frontend/src/pages/Chatpage.css
+++ b/frontend/src/pages/Chatpage.css
@@ -11,27 +11,30 @@
   border-radius: 40px;
   box-shadow: 0px 6px 69px -12px #464646;
   position: relative;
+  display: flex;
+  flex-wrap: nowrap;
   /* border: 5px solid darkgoldenrod; */
 }
 .chatscreen-container1 {
   width: inherit;
   height: inherit;
-  position: absolute;
-  top: 0;
-  left: 0;
+  /* position: absolute; */
+  /* top: 0; */
+  /* left: 0; */
 }
 .chatscreen_container {
   width: inherit;
   height: inherit;
   /* display: inline-block; */
-  position: relative;
+  /* position: relative; */
   /* border: 5px solid lime; */
   /* z-index: -3; */
 }
 .chatscreen {
   /* max-width: 800px; */
+  /* border: 5px solid lime; */
+  /* min-width: 500px; */
   min-width: 500px;
-  width: 760px;
   border: none;
   height: 92%;
   border-radius: 22px;
@@ -40,14 +43,6 @@
   right: 30px;
   bottom: 20px;
 }
-/* .currentUser {
-  background-color: lightskyblue;
-  width: 50px;
-  height: 20px;
-  border: 1px solid gray;
-  color: white;
-} */
-
 .leftbar {
   background-color: rgba(37, 35, 35, 1);
   width: 79px;
@@ -110,9 +105,11 @@
   letter-spacing: 0.2px;
 }
 .chatscreen2 {
-  width: 100%;
+  max-width: 100%;
+  min-width: 200px;
   height: 100%;
   position: relative;
+  /* border: 5px solid lime; */
 }
 .chatscreen-input-container {
   width: 90%;
@@ -247,4 +244,9 @@ li {
   margin-top: 10px;
   margin-bottom: 4px;
   box-shadow: 0px 4px 11px 0px rgba(0, 0, 0, 0.1);
+}
+@media only screen and (max-width: 600px) {
+.chatscreen2{
+  width: 200px ;
+}
 }
