--- a/frontend/src/pages/Chatpage.css
+++ b/frontend/src/pages/Chatpage.css
@@ -1,3 +1,6 @@
+/* *{
+  border: 3px solid lime;
+} */
 .padded-container {
   padding: 30px;
   height: 100vh;
@@ -10,39 +13,23 @@
   background-color: rgba(226, 226, 226, 1);
   border-radius: 40px;
   box-shadow: 0px 6px 69px -12px #464646;
-  position: relative;
+  /* position: relative; */
   display: flex;
-  flex-wrap: nowrap;
+  /* flex-wrap: wrap; */
   /* border: 5px solid darkgoldenrod; */
 }
-.chatscreen-container1 {
-  width: inherit;
-  height: inherit;
-  /* position: absolute; */
-  /* top: 0; */
-  /* left: 0; */
+.flex-item1 {
+  flex: 1;
+  display: flex;
 }
-.chatscreen_container {
-  width: inherit;
-  height: inherit;
-  /* display: inline-block; */
-  /* position: relative; */
-  /* border: 5px solid lime; */
-  /* z-index: -3; */
+.flex-item2 {
+  flex: 1.9;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: 15px;
+  padding-left: 15px;
 }
-.chatscreen {
-  /* max-width: 800px; */
-  /* border: 5px solid lime; */
-  /* min-width: 500px; */
-  min-width: 500px;
-  border: none;
-  height: 92%;
-  border-radius: 22px;
-  background: white;
-  position: absolute;
-  right: 30px;
-  bottom: 20px;
-}
+
 .leftbar {
   background-color: rgba(37, 35, 35, 1);
   width: 79px;
@@ -53,17 +40,14 @@
 .groups {
   border-radius: 0px 60px 60px 0px;
   background: #1c71ae;
-  width: 321px;
-  /* display: flex; */
   height: 100%;
-  position: absolute;
-  top: 0;
-  left: 79px;
+  flex-grow: 1;
   z-index: 999;
+  overflow-y: hidden;
 }
 .group-heading {
   color: #fff;
-  font-size: 30px;
+  font-size: 1.8vw;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -73,7 +57,7 @@
 .group3 {
   display: flex;
   align-items: center;
-  cursor: pointer !important;
+  cursor: pointer;
   padding: 15px 0;
   padding-left: 20px;
   z-index: 999;
@@ -81,7 +65,9 @@
 .group3:hover {
   background-color: #263d5a8c;
 }
-
+.active {
+  background-color: #263d5a8c;
+}
 .group-img {
   background-color: #fff;
   border-radius: 50%;
@@ -91,24 +77,27 @@
 }
 .groupname {
   color: #f7f4f4;
-  font-size: small;
+  /* font-size: small; */
+  font-size: 1vw;
 }
 .group-description-container {
   margin-left: 12px;
 }
 .group-description {
   margin-top: 6px;
-  font-size: small;
+  font-size: 1vw;
   max-width: 200px;
   color: rgba(250, 242, 242, 0.6);
   /* line-height: 130.99%; */
   letter-spacing: 0.2px;
 }
 .chatscreen2 {
-  max-width: 100%;
+  flex: 1;
   min-width: 200px;
   height: 100%;
   position: relative;
+  background-color: white;
+  border-radius: 40px;
   /* border: 5px solid lime; */
 }
 .chatscreen-input-container {
@@ -198,15 +187,25 @@
   bottom: 50px;
   overflow-y: scroll;
   padding-top: 8px;
+  /* display: flex; */
+}
+.start_typing {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  font-size: larger;
+  font-weight: 400;
+  color: blueviolet;
 }
 .chatbox::-webkit-scrollbar {
-  width: 12px;
-  /* border-radius: 30px; */
+  width: 6px;
   padding-right: 30px;
   height: 50px;
   background-color: transparent;
 }
 .chatbox::-webkit-scrollbar-thumb {
+  border-radius: 60px;
   /* border-radius: 30px; */
   background: #b9b5b582;
 }
@@ -215,18 +214,36 @@
 }
 .eachchat {
   display: flex;
+  /* align-items: center; */
   padding-left: 40px;
 }
+.eachchatright {
+  /* border: 2px solid lime; */
+  display: flex;
+  padding-right: 10px;
+  /* background-color: #1c71ae; */
+  justify-content: flex-end;
+}
+
 .chatimg {
+  display: flex;
+  justify-content: center;
+  font-size: x-small;
+  overflow: hidden;
+  /* padding-left: 14px; */
+  align-items: center;
+  color: white;
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  background-color: rgb(114, 114, 123);
+  background-color: rgb(78, 45, 140);
 }
 .currentUser {
-  font-size: smaller;
+  font-size: x-small;
   margin-left: 10px;
-  color: rgb(71, 73, 74);
+  /* color: rgb(71, 73, 74); */
+  color: #607D8B;
+
 }
 li {
   list-style-type: none;
@@ -235,7 +252,7 @@ li {
   /* color: white; */
   padding: 8px 12px;
   /* color:white; */
-  font-size:14px;
+  font-size: 14px;
   border-radius: 0px 11px 11px 11px;
   /* background: rgba(164, 211, 211, 0.66); */
   background: rgba(177, 225, 216, 0.486);
@@ -245,8 +262,19 @@ li {
   margin-bottom: 4px;
   box-shadow: 0px 4px 11px 0px rgba(0, 0, 0, 0.1);
 }
-@media only screen and (max-width: 600px) {
-.chatscreen2{
-  width: 200px ;
+.currentli {
+  border-radius: 11px 0px 11px 11px;
 }
+
+@media (max-width: 768px) {
+  .flex-item1 {
+    display: none;
+  }
+  .groupname2{
+    font-size: 2vw;
+  }
+  .group-description2{
+    padding-top: 5px;
+    font-size: 1.9vw;
+  }
 }
